--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ask Mufasa</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Talk to me</h1>
+        <p>Hi, I am Mufasa! Your gateway to job opportunities and skills development</p>
+    </header>
+    <main>
+        <section id="features">
+            <h2>What We Offer</h2>
+            <ul>
+                <li><a href="#resume-submission">Submit Resume</a></li>
+                <li><a href="#job-matching">Find Jobs</a></li>
+                <li><a href="#training">Training Resources</a></li>
+                <li><a href="#hr-training">HR Training</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
