--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <header>
         <h1>Talk to me</h1>
         <p>Hi, I am Mufasa! Your gateway to job opportunities and skills development</p>
+        <!-- New Header Options -->
+        <div class="header-options">
+            <!-- Sign In Button -->
+            <button class="sign-in-btn">Sign In / Login</button>
+
+            <!-- Language Selector -->
+            <select class="language-selector" aria-label="Select Language">
+                <option value="en">English</option>
+                <option value="fr">French</option>
+                <option value="rw">Kinyarwanda</option>
+                <option value="es">Spanish</option>
+                <option value="zh">Chinese</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
     </header>
     <main>
         <section id="features">
