--- a/index.html
+++ b/index.html
@@ -8,35 +8,46 @@
 </head>
 <body>
     <header>
-        <h1>Talk to me</h1>
-        <p>Hi, I am Mufasa! Your gateway to job opportunities and skills development</p>
-        <!-- New Header Options -->
-        <div class="header-options">
-            <!-- Sign In Button -->
-            <button class="sign-in-btn">Sign In / Login</button>
-
-            <!-- Language Selector -->
-            <select class="language-selector" aria-label="Select Language">
-                <option value="en">English</option>
-                <option value="fr">French</option>
-                <option value="rw">Kinyarwanda</option>
-                <option value="es">Spanish</option>
-                <option value="zh">Chinese</option>
-                <option value="other">Other</option>
-            </select>
+        <div class="header-container">
+            <!-- Logo/Title on the left -->
+            <div class="logo" style="color: #f1948a;">Ask Mufasa</div>
+            <!-- Navigation menu on the right -->
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#what-we-do">What we do</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#careers">Careers</a></li>
+                    <li class="dropdown">
+                        <a href="#training-resources" class="dropbtn">Training Resources</a>
+                        <div class="dropdown-content">
+                            <a href="#cv-training">CV/Resume Training</a>
+                            <a href="#hr-training">HR Training</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Login/Sign In and Language selector -->
+            <div class="header-options">
+                <button class="sign-in-btn">Login / Sign In</button>
+                <select class="language-selector" aria-label="Select Language">
+                    <option value="en">English</option>
+                    <option value="fr">French</option>
+                    <option value="rw">Kinyarwanda</option>
+                    <option value="es">Spanish</option>
+                    <option value="zh">Chinese</option>
+                </select>
+            </div>
         </div>
     </header>
+
     <main>
-        <section id="features">
-            <h2>What We Offer</h2>
-            <ul>
-                <li><a href="#resume-submission">Submit Resume</a></li>
-                <li><a href="#job-matching">Find Jobs</a></li>
-                <li><a href="#training">Training Resources</a></li>
-                <li><a href="#hr-training">HR Training</a></li>
-            </ul>
+        <section id="home">
+            <h1>Hi, I am Mufasa!</h1>
+            <p>Your gateway to job opportunities and skills development</p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
