--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ask Mufasa</title>
+    <title>Ask Mufasa!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="header-container">
             <!-- Logo/Title on the left -->
-            <div class="logo" style="color: #f1948a;">Ask Mufasa</div>
+            <div class="logo" style="color: #f1948a;">Ask Mufasa!</div>
             <!-- Navigation menu on the right -->
             <nav>
                 <ul>
