--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <!-- Logo/Title on the left -->
-            <div class="logo" style="color: #f1948a;">Ask Mufasa!</div>
+            <div class="logo" style="color: #93785b;">Ask Mufasa!</div>
             <!-- Navigation menu on the right -->
             <nav>
                 <ul>
