--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <main>
         <section id="home">
+            <div class="background-image"></div>
             <h1>Hi, I am Mufasa!</h1>
             <p>Your gateway to job opportunities and skills development</p>
         </section>
