--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <main>
         <section id="home">
             <div class="background-image"></div>
-            <h1>Hi, I am Mufasa!</h1>
-            <p>Your gateway to job opportunities and skills development</p>
+            <h1 class="animate-rise">Hi, I am Mufasa!</h1>
+            <p class="animate-rise">Your gateway to job opportunities and skills development</p>
         </section>
     </main>
 
