--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Login/Sign In and Language selector -->
             <div class="header-options">
                 <button class="sign-in-btn">Login / Sign In</button>
-                <select class="language-selector" aria-label="Select Language">
+                <select id="language-selector" class="language-selector" aria-label="Select Language">
                     <option value="en">English</option>
                     <option value="fr">French</option>
                     <option value="rw">Kinyarwanda</option>
@@ -39,6 +39,7 @@
                 </select>
             </div>
         </div>
+        <script src="script.js"></script>
     </header>
 
     <main>
