--- a/index.html
+++ b/index.html
@@ -44,12 +44,25 @@
 
     <main>
         <section id="home">
-            <div class="background-image"></div>
-            <h1 class="animate-rise">Hi, I am Mufasa!</h1>
-            <p class="animate-rise">Your gateway to job opportunities and skills development</p>
-        </section>
-    </main>
+    <div class="background-image"></div>
+    <h1 class="animate-rise">Hi, I am Mufasa!</h1>
+    <p class="animate-rise">Your gateway to job opportunities and skills development</p>
+    <!-- Get Started Button -->
+    <div class="get-started-container">
+        <a href="#resume-upload" class="get-started-btn">Get Started</a>
+    </div>
+</section>
 
+<!-- Resume Upload Section -->
+<section id="resume-upload">
+    <h2>Upload Your Resume/CV</h2>
+    <form>
+        <label for="resume">Choose your file:</label>
+        <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" />
+        <button type="submit">Upload</button>
+    </form>
+</section>
+    </main>
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
