--- a/index.html
+++ b/index.html
@@ -42,20 +42,23 @@
         </div>
         <script src="script.js"></script>
     </header>
-
     <main>
-        <section id="home">
+        <!-- Home Section -->
+<section id="home">
     <div class="background-image"></div>
     <h1 class="animate-rise">Hi, I am Mufasa!</h1>
     <p class="animate-rise">Your gateway to job opportunities and skills development</p>
-    <!-- Get Started Button -->
+</section>
+
+<!-- Get Started Section -->
+<section id="get-started-section">
     <div class="get-started-container">
-        <a href="#resume-upload" class="get-started-btn">Get Started</a>
+        <a href="#resume-upload" id="get-started-btn" class="get-started-btn">Get Started</a>
     </div>
 </section>
 
-<!-- Resume Upload Section -->
-<section id="resume-upload">
+<!-- Resume Upload Section (Initially Hidden) -->
+<section id="resume-upload" style="display: none;">
     <h2>Upload Your Resume/CV</h2>
     <form>
         <label for="resume">Choose your file:</label>
