--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
+<script src="script.js"></script>
 </body>
 </html>
