--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
 
 <!-- Resume Upload Section (Initially Hidden) -->
 <section id="resume-upload" style="display: none;">
+    <div class="upload-container">
     <h2>Upload Your Resume/CV</h2>
     <form>
         <label for="resume">Choose your file:</label>
         <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" />
         <button type="submit">Upload</button>
     </form>
+    </div>
 </section>
     </main>
     <footer>
