--- a/index.html
+++ b/index.html
@@ -60,12 +60,21 @@
 <!-- Resume Upload Section (Initially Hidden) -->
 <section id="resume-upload" style="display: none;">
     <div class="upload-container">
-    <h2>Upload Your Resume/CV</h2>
-    <form>
-        <label for="resume">Choose your file:</label>
-        <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" />
-        <button type="submit">Upload</button>
-    </form>
+        <h2>Upload Your Resume/CV</h2>
+        <form id="upload-form">
+            <label for="resume">Choose your file:</label>
+            <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" />
+            <button type="submit" class="upload-btn">Upload</button>
+        </form>
+
+        <!-- Display extracted data -->
+        <div id="cv-summary" style="display: none; margin-top: 2rem;">
+            <h3>Extracted Information:</h3>
+            <p><strong>Name:</strong> <span id="name"></span></p>
+            <p><strong>Date of Birth:</strong> <span id="dob"></span></p>
+            <p><strong>Work Experience:</strong> <span id="experience"></span></p>
+            <p><strong>Skills:</strong> <span id="skills"></span></p>
+        </div>
     </div>
 </section>
     </main>
