--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 </section>
 
 <!-- Get Started Section -->
-<section id="get-started-section">
+<section id="get-started-section" style="text-align: center;">
     <div class="get-started-container">
         <a href="#resume-upload" id="get-started-btn" class="get-started-btn">Get Started</a>
     </div>
 </section>
 
 <!-- Resume Upload Section (Initially Hidden) -->
-<section id="resume-upload" style="display: flex; justify-content: space-between; align-items: flex-start;">
+<section id="resume-upload" style="display: none; margin-top: 2rem; justify-content: center; align-items: flex-start;">
     <!-- Upload CV Section -->
-    <div class="upload-container" style="flex: 1; margin-right: 10px;">
+    <div class="upload-container card">
         <h2>Upload Your Resume/CV</h2>
         <form id="upload-form">
             <label for="resume">Choose your file:</label>
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Create CV Section -->
-    <div class="create-container" style="flex: 1; margin-left: 10px;">
+    <div class="create-container card">
         <h2>Don't Have One?</h2>
         <p>No worries! We got you covered.</p>
         <button class="create-btn">Create CV</button>
