--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 </section>
 
 <!-- Get Started Section -->
-<section id="get-started-section" style="text-align: center;">
+<section id="get-started-section">
     <div class="get-started-container">
         <a href="#resume-upload" id="get-started-btn" class="get-started-btn">Get Started</a>
     </div>
 </section>
 
 <!-- Resume Upload Section (Initially Hidden) -->
-<section id="resume-upload" style="display: none; margin-top: 2rem; justify-content: center; align-items: flex-start;">
+<section id="resume-upload" style="display: none; justify-content: center; align-items: flex-start;">
     <!-- Upload CV Section -->
     <div class="upload-container card">
         <h2>Upload Your Resume/CV</h2>
