--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </section>
 
 <!-- Resume Upload Section (Initially Hidden) -->
-<section id="resume-upload" style="display: none; justify-content: center; align-items: flex-start;">
+<section id="resume-upload" style="display: none;">
     <!-- Upload CV Section -->
     <div class="upload-container card">
         <h2>Upload Your Resume/CV</h2>
