--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!-- Resume Upload Section (Initially Hidden) -->
 <section id="resume-upload" style="display: none;">
     <!-- Upload CV Section -->
-    <div class="upload-container card">
+    <div class="upload-container card animate-rise" style="opacity: 0;">
         <h2>Upload Your Resume/CV</h2>
         <form id="upload-form">
             <label for="resume">Choose your file:</label>
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Create CV Section -->
-    <div class="create-container card">
+    <div class="create-container card animate-rise" style="opacity: 0;>
         <h2>Don't Have One?</h2>
         <p>No worries! We got you covered.</p>
         <button class="create-btn">Create CV</button>
