--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Create CV Section -->
-    <div class="create-container card animate-rise" style="opacity: 0;>
+    <div class="create-container card animate-rise" style="opacity: 0;">
         <h2>Don't Have One?</h2>
         <p>No worries! We got you covered.</p>
         <button class="create-btn">Create CV</button>
