--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="create-container card animate-rise" style="opacity: 0;">
         <h2>Don't Have One?</h2>
         <p>No worries! We got you covered.</p>
-        <button class="create-btn">Create CV</button>
+        <button class="create-btn" onclick="window.location.href='cv-templates.html'">Create CV</button>
     </div>
 </section>
     </main>
