--- a/cv-templates.html
+++ b/cv-templates.html
@@ -41,5 +41,11 @@
             </div>
         </div>
     </header>
+    <!-- Create Your Professional CV Section -->
+<section id="create-cv" style="position: relative;">
+    <div class="background-image"></div>
+    <h1 class="animate-rise">Create Your Professional CV</h1>
+    <p class="animate-rise">Browse and select a template to begin creating your CV with Ask Mufasa!</p>
+</section>
 </body>
 </html>
