--- a/cv-templates.html
+++ b/cv-templates.html
@@ -40,12 +40,15 @@
                 </select>
             </div>
         </div>
+   <script src="script.js"></script>
     </header>
+    <main>
     <!-- Create Your Professional CV Section -->
 <section id="create-cv" style="position: relative;">
     <div class="background-image"></div>
     <h1 class="animate-rise">Create Your Professional CV</h1>
     <p class="animate-rise">Browse and select a template to begin creating your CV with Ask Mufasa!</p>
 </section>
+    </main>       
 </body>
 </html>
