--- a/cv-templates.html
+++ b/cv-templates.html
@@ -49,6 +49,73 @@
     <h1 class="animate-rise">Create Your Professional CV</h1>
     <p class="animate-rise">Browse and select a template to begin creating your CV with Ask Mufasa!</p>
 </section>
+    <!-- Template Gallery Section -->
+<section id="template-gallery">
+    <h2>Choose a CV Template</h2>
+    <p>Pick the design that works best for you and start building your professional CV!</p>
+    <div class="gallery-container">
+        <!-- Template 1 -->
+        <div class="template">
+            <img src="template1.jpg" alt="Template 1" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 2 -->
+        <div class="template">
+            <img src="template2.jpg" alt="Template 2" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 3 -->
+        <div class="template">
+            <img src="template3.jpg" alt="Template 3" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 4 -->
+        <div class="template">
+            <img src="template4.jpg" alt="Template 4" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 5 -->
+        <div class="template">
+            <img src="template5.jpg" alt="Template 5" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 6 -->
+        <div class="template">
+            <img src="template6.jpg" alt="Template 6" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 7 -->
+        <div class="template">
+            <img src="template7.jpg" alt="Template 7" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 8 -->
+        <div class="template">
+            <img src="template8.jpg" alt="Template 8" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 9 -->
+        <div class="template">
+            <img src="template9.jpg" alt="Template 9" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 10 -->
+        <div class="template">
+            <img src="template10.jpg" alt="Template 10" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 11 -->
+        <div class="template">
+            <img src="template11.jpg" alt="Template 11" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+        <!-- Template 12 -->
+        <div class="template">
+            <img src="template12.jpg" alt="Template 12" class="template-img">
+            <button class="use-template-btn">Use This Template</button>
+        </div>
+    </div>
+</section>
     </main>       
 </body>
 </html>
