--- a/cv-templates.html
+++ b/cv-templates.html
@@ -56,62 +56,62 @@
     <div class="gallery-container">
         <!-- Template 1 -->
         <div class="template">
-            <img src="template1.jpg" alt="Template 1" class="template-img">
+            <img src="Template 1.png" alt="Template 1" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 2 -->
         <div class="template">
-            <img src="template2.jpg" alt="Template 2" class="template-img">
+            <img src="Template 2.png" alt="Template 2" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 3 -->
         <div class="template">
-            <img src="template3.jpg" alt="Template 3" class="template-img">
+            <img src="Template 3.png" alt="Template 3" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 4 -->
         <div class="template">
-            <img src="template4.jpg" alt="Template 4" class="template-img">
+            <img src="Template 4.png" alt="Template 4" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 5 -->
         <div class="template">
-            <img src="template5.jpg" alt="Template 5" class="template-img">
+            <img src="Template 5.png" alt="Template 5" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 6 -->
         <div class="template">
-            <img src="template6.jpg" alt="Template 6" class="template-img">
+            <img src="Template 6.png" alt="Template 6" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 7 -->
         <div class="template">
-            <img src="template7.jpg" alt="Template 7" class="template-img">
+            <img src="Template 7.png" alt="Template 7" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 8 -->
         <div class="template">
-            <img src="template8.jpg" alt="Template 8" class="template-img">
+            <img src="Template 8.png" alt="Template 8" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 9 -->
         <div class="template">
-            <img src="template9.jpg" alt="Template 9" class="template-img">
+            <img src="Template 9.png" alt="Template 9" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 10 -->
         <div class="template">
-            <img src="template10.jpg" alt="Template 10" class="template-img">
+            <img src="Template 10.png" alt="Template 10" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 11 -->
         <div class="template">
-            <img src="template11.jpg" alt="Template 11" class="template-img">
+            <img src="Template 11.png" alt="Template 11" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
         <!-- Template 12 -->
         <div class="template">
-            <img src="template12.jpg" alt="Template 12" class="template-img">
+            <img src="Template 12.png" alt="Template 12" class="template-img">
             <button class="use-template-btn">Use This Template</button>
         </div>
     </div>
