--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     <!-- Upload CV Section -->
     <div class="upload-container card animate-rise" style="opacity: 0;">
         <h2>Upload Your Resume/CV</h2>
-        <form id="upload-form">
+        <form id="upload-form" enctype="multipart/form-data">
             <label for="resume">Choose your file:</label>
-            <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" />
+            <input type="file" id="resume" name="file" accept=".pdf" />
             <button type="submit" class="upload-btn">Upload</button>
         </form>
+        
 
         <!-- Display extracted data -->
         <div id="cv-summary" style="display: none; margin-top: 2rem;">
