--- a/extracted-info.html
+++ b/extracted-info.html
@@ -47,6 +47,7 @@
                 <p><strong>Skills:</strong> Technical skills, programming, communication, customer service, leadership, resilience</p>
             </div>
         </section>
+        <script src="script.js"></script>
     </main>
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
