--- a/extracted-info.html
+++ b/extracted-info.html
@@ -36,18 +36,38 @@
                 </select>
             </div>
         </div>
+        <script src="script.js"></script>
     </header>
+  
+    <!-- Dashboard Section -->
+<section id="your-dashboard" style="position: relative;">
+    <div class="background-image"></div>
+    <h1 class="animate-rise">My Dashboard</h1>
+    <p class="animate-rise">Track your progress with Ask Mufasa!</p>
+</section>
     <main>
         <section id="extracted-info">
-            <div class="content-container card">
-                <h2>Extracted Information</h2>
-                <p><strong>Name:</strong> Amina Msuya</p>
-                <p><strong>Date of Birth:</strong> August 10, 2004</p>
-                <p><strong>Work Experience:</strong> 5 months in digital marketing, 8 months in college counselling, 4 months in teaching, 4 months in hospitality</p>
-                <p><strong>Skills:</strong> Technical skills, programming, communication, customer service, leadership, resilience</p>
-            </div>
+    <div class="content-container card">
+        <h2>Extracted Information</h2>
+        <p><strong>Name:</strong> Amina Msuya</p>
+        <p><strong>Date of Birth:</strong> August 10, 2004</p>
+        <p><strong>Work Experience:</strong></p>
+        <ul>
+            <li>5 months in digital marketing</li>
+            <li>8 months in college counselling</li>
+            <li>4 months in teaching</li>
+            <li>4 months in hospitality</li>
+        </ul>
+        <p><strong>Skills:</strong></p>
+        <ul>
+            <li>Technical skills</li>
+            <l2>Programming</l2>
+            <l3>Communication skills</l3>
+            <l4>Customer service</l4>
+            <l5>Leadership skills</l5>
+            <l6>Resilience</l6>
+    </div>
         </section>
-        <script src="script.js"></script>
     </main>
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
