--- a/extracted-info.html
+++ b/extracted-info.html
@@ -61,14 +61,14 @@
         <p><strong>Skills:</strong></p>
         <ul>
             <li>Technical skills</li>
-            <l2>Programming</l2>
-            <l3>Communication skills</l3>
-            <l4>Customer service</l4>
-            <l5>Leadership skills</l5>
-            <l6>Resilience</l6>
+            <li>Programming</li>
+            <li>Communication</li>
+            <li>Customer service</li>
+            <li>Leadership</li>
+            <li>Resilience</li>
         </ul>
     </div>
-        </section>
+</section>
     </main>
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
