--- a/extracted-info.html
+++ b/extracted-info.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- header Section -->
     <header>
         <div class="header-container">
             <div class="logo" style="color: #93785b;">Ask Mufasa!</div>
@@ -45,6 +46,8 @@
     <h1 class="animate-rise">My Dashboard</h1>
     <p class="animate-rise">Track your progress with Ask Mufasa!</p>
 </section>
+    
+    <!-- Extracted Information Section -->
     <main>
         <section id="extracted-info">
     <div class="content-container card">
@@ -70,6 +73,8 @@
     </div>
 </section>
     </main>
+
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
