--- a/extracted-info.html
+++ b/extracted-info.html
@@ -51,7 +51,7 @@
     <main>
         <section id="extracted-info">
     <div class="content-container card">
-        <h2>Extracted Information</h2>
+        <h2 id="typewriter-heading">Extracted Information</h2>
         <p><strong>Name:</strong> Amina Msuya</p>
         <p><strong>Date of Birth:</strong> August 10, 2004</p>
         <p><strong>Work Experience:</strong></p>
