--- a/extracted-info.html
+++ b/extracted-info.html
@@ -49,30 +49,18 @@
     
     <!-- Extracted Information Section -->
     <main>
-        <section id="extracted-info">
-    <div class="content-container card">
-        <h2 id="typewriter-heading">Extracted Information</h2>
-        <p><strong>Name:</strong> Amina Msuya</p>
-        <p><strong>Date of Birth:</strong> August 10, 2004</p>
-        <p><strong>Work Experience:</strong></p>
-        <ul>
-            <li>5 months in digital marketing</li>
-            <li>8 months in college counselling</li>
-            <li>4 months in teaching</li>
-            <li>4 months in hospitality</li>
-        </ul>
-        <p><strong>Skills:</strong></p>
-        <ul>
-            <li>Technical skills</li>
-            <li>Programming</li>
-            <li>Communication</li>
-            <li>Customer service</li>
-            <li>Leadership</li>
-            <li>Resilience</li>
-        </ul>
-    </div>
-</section>
-    </main>
+    <section id="extracted-info">
+        <div class="content-container card">
+            <h2 id="typewriter-heading" class="typewriter">Extracted Information</h2>
+            <p><strong>Name:</strong> <span id="name" class="typewriter"></span></p>
+            <p><strong>Date of Birth:</strong> <span id="dob" class="typewriter"></span></p>
+            <p><strong>Work Experience:</strong></p>
+            <ul id="experience-list"></ul>
+            <p><strong>Skills:</strong></p>
+            <ul id="skills-list"></ul>
+        </div>
+    </section>
+</main>
 
     <!-- Footer Section -->
     <footer>
