--- a/extracted-info.html
+++ b/extracted-info.html
@@ -59,8 +59,15 @@
             <p><strong>Skills:</strong></p>
             <ul id="skills-list"></ul>
         </div>
+         <!-- Add the button here -->
+    <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
+    <!-- Placeholder for the Pie Chart -->
+<div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
+    <canvas></canvas>
+</div>
     </section>
 </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Footer Section -->
     <footer>
