--- a/extracted-info.html
+++ b/extracted-info.html
@@ -63,7 +63,7 @@
     <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
     <!-- Placeholder for the Pie Chart -->
 <div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
-    <canvas></canvas>
+    <canvas id="skills-chart" ></canvas>
 </div>
     </section>
 </main>
