--- a/extracted-info.html
+++ b/extracted-info.html
@@ -59,8 +59,7 @@
             <p><strong>Skills:</strong></p>
             <ul id="skills-list"></ul>
      <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
-        </div>
-<div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
+    <chart  id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;" ></chart>
     <canvas id="skills-chart" ></canvas>
 </div>
     </section>
