--- a/extracted-info.html
+++ b/extracted-info.html
@@ -49,19 +49,27 @@
     
     <!-- Extracted Information Section -->
     <main>
-    <section id="extracted-info">
-        <div class="content-container card">
-            <h2 id="typewriter-heading" class="typewriter">Extracted Information</h2>
-            <p><strong>Name:</strong> <span id="name" class="typewriter"></span></p>
-            <p><strong>Date of Birth:</strong> <span id="dob" class="typewriter"></span></p>
-            <p><strong>Work Experience:</strong></p>
-            <ul id="experience-list"></ul>
-            <p><strong>Skills:</strong></p>
-            <ul id="skills-list"></ul>
-     <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
-    <chart  id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;" ></chart>
-    <canvas id="skills-chart" ></canvas>
-</div>
+    <section id="extracted-info-section">
+        <div class="info-container">
+            <!-- Extracted Information Card -->
+            <div class="content-container card">
+                <h2 id="typewriter-heading" class="typewriter">Extracted Information</h2>
+                <p><strong>Name:</strong> <span id="name" class="typewriter"></span></p>
+                <p><strong>Date of Birth:</strong> <span id="dob" class="typewriter"></span></p>
+                <p><strong>Work Experience:</strong></p>
+                <ul id="experience-list"></ul>
+                <p><strong>Skills:</strong></p>
+                <ul id="skills-list"></ul>
+            </div>
+
+            <!-- Compare My Skills Button -->
+            <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
+
+            <!-- Skills Comparison Chart -->
+            <div id="skills-comparison-chart" style="width: 400px; height: 400px; display: none;">
+                <canvas id="skills-chart"></canvas>
+            </div>
+        </div>
     </section>
 </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
