--- a/extracted-info.html
+++ b/extracted-info.html
@@ -72,6 +72,30 @@
         </div>
     </section>
 </main>
+    <main>
+    <section id="skills-categories">
+        <div class="content-container">
+            <h2>21st-Century Competitive Skills</h2>
+            <p>Here’s how skills are grouped into the most competitive categories in today’s labor market:</p>
+            <ul>
+                <li><strong>Foundational Skills:</strong> Problem-solving, Critical thinking, Creativity, Analytical reasoning</li>
+                <li><strong>Socio-Emotional Skills:</strong> Communication, Teamwork, Leadership, Adaptability, Emotional intelligence</li>
+                <li><strong>Specialized Skills:</strong> Technical skills, Programming, Project management, Entrepreneurship</li>
+                <li><strong>Green & Sustainable Skills:</strong> Environmental awareness, Sustainable practices</li>
+                <li><strong>Digital & Technological Skills:</strong> Digital literacy, Cybersecurity, Cloud computing, AI</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Recommendations Section -->
+    <section id="recommendations" style="display: none;">
+        <div class="content-container">
+            <h2>Recommendations</h2>
+            <p>Based on the analysis of your skills, here are our suggestions for areas to improve:</p>
+            <ul id="recommendations-list"></ul>
+        </div>
+    </section>
+</main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Footer Section -->
