--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Home Section -->
 <section id="home">
     <div class="background-image"></div>
-    <h1 class="animate-rise">Hi, I am Mufasa!!</h1>
+    <h1 class="animate-rise">Hi, I am Mufasa!</h1>
     <p class="animate-rise">Your gateway to job opportunities and skills development</p>
 </section>
 
