--- a/extracted-info.html
+++ b/extracted-info.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extracted Information - Ask Mufasa!</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <!-- header Section -->
@@ -40,12 +41,11 @@
         <script src="script.js"></script>
     </header>
   
-    <!-- Dashboard Section -->
-<section id="your-dashboard" style="position: relative;">
-    <div class="background-image"></div>
-    <h1 class="animate-rise">My Dashboard</h1>
-    <p class="animate-rise">Track your progress with Ask Mufasa!</p>
-</section>
+    <section id="home">
+        <!-- <div class="background-image"></div> -->
+        <h1 class="animate-rise">My Dashboard</h1>
+        <p class="animate-rise">Track your progress with Ask Mufasa!</p>
+    </section>
     
     <!-- Extracted Information Section -->
     <main>
@@ -66,34 +66,9 @@
             <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
 
             <!-- Skills Comparison Chart -->
-            <div id="skills-comparison-chart" style="width: 400px; height: 400px; display: none;">
-                <canvas id="skills-chart"></canvas>
+            <div id="skills-chart" style="width: 400px; height: 400px; margin: 2rem auto; ">
+                <canvas id="skills-chart" width="400" height="400"></canvas>
             </div>
-        </div>
-     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    </section>
-</main>
-    <main>
-    <section id="skills-categories">
-        <div class="content-container">
-            <h2>21st-Century Competitive Skills</h2>
-            <p>Here’s how skills are grouped into the most competitive categories in today’s labor market:</p>
-            <ul>
-                <li><strong>Foundational Skills:</strong> Problem-solving, Critical thinking, Creativity, Analytical reasoning</li>
-                <li><strong>Socio-Emotional Skills:</strong> Communication, Teamwork, Leadership, Adaptability, Emotional intelligence</li>
-                <li><strong>Specialized Skills:</strong> Technical skills, Programming, Project management, Entrepreneurship</li>
-                <li><strong>Green & Sustainable Skills:</strong> Environmental awareness, Sustainable practices</li>
-                <li><strong>Digital & Technological Skills:</strong> Digital literacy, Cybersecurity, Cloud computing, AI</li>
-            </ul>
-        </div>
-    </section>
-
-    <!-- Recommendations Section -->
-    <section id="recommendations" style="display: none;">
-        <div class="content-container">
-            <h2>Recommendations</h2>
-            <p>Based on the analysis of your skills, here are our suggestions for areas to improve:</p>
-            <ul id="recommendations-list"></ul>
         </div>
     </section>
 </main>
@@ -101,5 +76,6 @@
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
