--- a/extracted-info.html
+++ b/extracted-info.html
@@ -11,7 +11,7 @@
     <!-- header Section -->
     <header>
         <div class="header-container">
-            <div class="logo" style="color: #93785b;">Ask Mufasa!</div>
+            <div class="logo" style="color: #93785b;">My Dashboard!</div>
             <nav>
                 <ul>
                     <li><a href="index.html#home">Home</a></li>
@@ -41,7 +41,7 @@
         <script src="script.js"></script>
     </header>
   
-    <section id="home">
+    <section id="your-dashboard">
         <!-- <div class="background-image"></div> -->
         <h1 class="animate-rise">My Dashboard</h1>
         <p class="animate-rise">Track your progress with Ask Mufasa!</p>
@@ -71,11 +71,23 @@
             </div>
         </div>
     </section>
+
+    <!-- Modules Section -->
+    <section id="module-directory" style="margin-top: 2rem;">
+        <h2 style="text-align: center; color: #93785b;">Choose Your Training Module</h2>
+        <div class="directory-container">
+            <button class="module-btn" onclick="location.href='excel-basics.html'">Excel Basics</button>
+            <button class="module-btn" onclick="location.href='soft-skills.html'">Soft Skills</button>
+            <button class="module-btn" onclick="location.href='coding-basics.html'">Coding for Beginners</button>
+            <button class="module-btn" onclick="location.href='communication-skills.html'">Communication Skills</button>
+            <button class="module-btn" onclick="location.href='digital-literacy.html'">Digital Literacy</button>
+        </div>
+    </section>    
 </main>
+
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Ask Mufasa. All Rights Reserved.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
