--- a/extracted-info.html
+++ b/extracted-info.html
@@ -71,6 +71,19 @@
             </div>
         </div>
     </section>
+        <section id="progress-chart" style="margin-top: 2rem;">
+        <h2 style="text-align: center; color: #93785b;">Your Progress</h2>
+        <div class="chart-container">
+            <div class="progress-bar">
+                <div class="progress-fill" id="progress-fill"></div>
+            </div>
+            <div class="progress-details">
+                <p><strong>Modules Completed:</strong> <span id="completed-modules">0</span> / 5</p>
+                <p><strong>Progress:</strong> <span id="progress-percentage">0%</span></p>
+                <p><strong>Badges Earned:</strong> <span id="badges-earned">None yet!</span></p>
+            </div>
+        </div>
+    </section>
 
     <!-- Modules Section -->
     <section id="module-directory" style="margin-top: 2rem;">
