--- a/extracted-info.html
+++ b/extracted-info.html
@@ -66,9 +66,9 @@
             <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
 
             <!-- Skills Comparison Chart -->
-            <div id="skills-chart" style="width: 400px; height: 400px; margin: 2rem auto; ">
-                <canvas id="skills-chart" width="400" height="400"></canvas>
-            </div>
+<div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
+    <canvas id="skills-chart" width="400" height="400"></canvas>
+</div>
         </div>
     </section>
         <section id="progress-chart" style="margin-top: 2rem;">
