--- a/extracted-info.html
+++ b/extracted-info.html
@@ -66,6 +66,7 @@
             <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
 
             <!-- Skills Comparison Chart -->
+            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
     <canvas id="skills-chart" width="400" height="400"></canvas>
 </div>
