--- a/extracted-info.html
+++ b/extracted-info.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extracted Information - Ask Mufasa!</title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- header Section -->
@@ -66,8 +67,7 @@
             <button id="compare-skills-btn" class="compare-btn">Compare My Skills</button>
 
             <!-- Skills Comparison Chart -->
-            <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
+            <div id="skills-comparison-chart" style="width: 400px; height: 400px; margin: 2rem auto; display: none;">
     <canvas id="skills-chart" width="400" height="400"></canvas>
 </div>
         </div>
